fix Figure small on Mobile viewport

--- a/components/figure/_figure-wrap.css
+++ b/components/figure/_figure-wrap.css
@@ -92,7 +92,22 @@
     }
   }
 
-  &--lge { width: 75%; }
-  &--med { width: 50%; }
-  &--sml { width: 35%; }
+  &--lge {
+    width: 75%;
+    @media(--bp-max-x-mobile){
+      width: 100%;
+    }
+  }
+  &--med {
+    width: 50%;
+    @media(--bp-max-x-mobile){
+      width: 100%;
+    }
+  }
+  &--sml {
+    width: 35%;
+    @media(--bp-max-x-mobile){
+      width: 100%;
+    }
+  }
 }
